# GameOfLife

./: .gitignore  CMakeLists.txt  LICENSE  changelog.md  commands.md  readme.md
examples/: doubleU.txt  glider.txt
include/: commands.h  config.h  gol.h  osFunc.h
source/: commands.c  gol.c  main.c  osFunc.c
